# Cree

./: README.md  validate_setup.py
backend/: README.md  alembic.ini  fix_alembic.py  pyproject.toml  test_db.py
backend/app/: main.py
backend/app/common/: dependencies.py
backend/app/core/: config.py  database.py  security.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 22d48585032b_add_instagram_and_youtube_fields_to_.py  3b69128322bd_manual_restore_of_saved_creators.py  3fbacdf46b79_create_youtube_channel_and_video_tables.py  5f89fd933050_add_instagram_analytics_tables.py  8230328dad8f_add_missing_caching_columns_to_.py  8dc7c50da286_create_users_table.py  a8b57869c9d8_add_instagram_and_youtube_columns_to_.py  ab0b60e6d270_add_instagram_analytics.py  c4a1b2d9e6f0_create_brand_profiles.py  cee76db5231d_add_ai_summary_column.py  dd173ce633c3_add_caching_columns_to_creatorprofile.py  e18862f1a8d4_add_youtube_channel_and_video_tables.py  eb8943fe94e8_create_creator_profiles.py  ede20de67a7b_add_saved_creators_table.py  f9ca5e8aed1b_add_caching_columns_to_creatorprofile.py  fe798cbf3e4e_add_instagram_tables.py
backend/app/models/: __init__.py  instagram.py
backend/app/modules/ai/: ai_service.py  router.py  schemas.py
backend/app/modules/auth/: router.py  schemas.py  service.py  utils.py
backend/app/modules/users/: models.py  router.py  schemas.py  service.py
backend/app/modules/youtube/: models.py  routes.py  scrapper.py  service.py  youtube_extractor.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+69 files in other folders)
